CMAKE_MINIMUM_REQUIRED(VERSION 3.15)

PROJECT(pyentry LANGUAGES CXX)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)
SET(CMAKE_CXX_FLAGS_DEBUG "-Wall -O0 -g -ggdb")
SET(PYTHON_VERSION "310" CACHE STRING "python version")

if (NOT CMAKE_BUILD_TYPE)
    SET(CMAKE_BUILD_TYPE Debug)
    ADD_COMPILE_DEFINITIONS(_DEBUG)
endif()

FIND_PACKAGE(Python REQUIRED COMPONENTS Development.Module)

CONFIGURE_FILE(include/config.hpp.in ${CMAKE_CURRENT_BINARY_DIR}/config.hpp)

ADD_EXECUTABLE(${PROJECT_NAME})
TARGET_INCLUDE_DIRECTORIES(
    ${PROJECT_NAME}
    PRIVATE
        include
        ${CMAKE_CURRENT_BINARY_DIR}
        ${Python_INCLUDE_DIRS}
)
TARGET_SOURCES(
    ${PROJECT_NAME}
    PRIVATE
        src/main.cpp
        src/pyentry.cpp
)
TARGET_LINK_LIBRARIES(
    ${PROJECT_NAME}
    PRIVATE
        ${Python_LIBRARIES}
)
